add missing parts

--- a/notice/notice.tex
+++ b/notice/notice.tex
@@ -127,6 +127,26 @@ Pensez à ébarber, blanchir et dégraisser les zones de soudage afin d'assurer 
     \caption{joints}
     \label{fig:joints}
 \end{figure}
+\subsubsection{Cornières variateur}
+Le variateur de fréquence (mono/tri) doit être fixé sur une planche vissée entre deux cornières, elles-mêmes soudées au bâti. 
+\begin{figure}[H]
+    \centering
+    \includegraphics*[width=0.8\textwidth]{../plans/corniere-variateur-bas}
+    \caption{Cornière du bas}
+    \label{fig:corniere-variateur-bas}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics*[width=0.8\textwidth]{../plans/corniere-variateur-haut}
+    \caption{Cornière du haut}
+    \label{fig:corniere-variateur-haut}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics*[width=0.8\textwidth]{../plans/joint-base}
+    \caption{joints}
+    \label{fig:joints}
+\end{figure}
 \subsubsection{Tubes bâti}
 \begin{figure}[H]
     \centering
@@ -172,6 +192,32 @@ Le réducteur est fixé à ces plaques par 6 ou 8 vis de 8mm équipées de ronde
 Une fois tout le bâti construit, on peut attacher les plaques au réducteur, positionner ces plaques sur le bâti de manière à ce que la broche
 tourne avec une concentricité inférieure à 5 centièmes de millimètres (placer un comparateur sur le bâti et mesurer les oscillations de la broche). 
 Ceci effectué, pointer, contrôler la concentricité, souder. 
+
+\subsection{carter}
+\begin{figure}[H]
+    \centering
+    \includegraphics*[width=0.8\textwidth]{../plans/carter-principal}
+    \caption{Carter principal}
+    \label{fig:carter-principal}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics*[width=0.8\textwidth]{../plans/couvercle-carter}
+    \caption{Couvercle carter}
+    \label{fig:couvercle-carter}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics*[width=0.8\textwidth]{../plans/tole-carter-arriere}
+    \caption{Tôle arrière carter}
+    \label{fig:tole-carter-arriere}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics*[width=0.8\textwidth]{../plans/tole-carter-laterale}
+    \caption{Tôle latérale carter}
+    \label{fig:tole-carter-laterale}
+\end{figure}
 
 
 \end{document}
